# mini_vim

./: CMakeLists.txt  README.md
include/domain/editor/: editor.hpp  editor_state.hpp  keys.hpp
include/domain/editor/buffer/: gap_buffer.hpp  string_buffer.hpp
include/domain/editor/mode/: command.hpp  insert.hpp  mode_enum.hpp  mode_interface.hpp  normal.hpp
include/domain/events/: event.hpp  event_manager.hpp
include/domain/renderer/: renderer.hpp
include/infra/: terminal.hpp
src/: main.cpp
src/domain/editor/: editor.cpp  editor_state.cpp
src/domain/editor/buffer/: gap_buffer.cpp  string_buffer.cpp
src/domain/editor/mode/: command.cpp  insert.cpp  mode_enum.cpp  normal.cpp
src/domain/events/: event_manager.cpp
src/domain/renderer/: renderer.cpp
src/infra/: terminal.cpp
